--- a/src/styles.css
+++ b/src/styles.css
@@ -75,3 +75,25 @@ button:hover {
     margin-bottom: 0;
   }
 }
+
+.card-list {
+  margin-top: 4rem;
+}
+
+.card {
+  padding: 2rem 4rem;
+  border-radius: 10px;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.75);
+  margin-bottom: 2rem;
+  background-color: white;
+}
+
+.card--title {
+  font-size: 3.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.card--image {
+  margin: 0 auto;
+  display: block;
+}
